--- a/src/components/Button/button.stories.mdx
+++ b/src/components/Button/button.stories.mdx
@@ -17,7 +17,7 @@ import Button from '.'
   npm install cola-comp --save
 ```
 ##### 基本用法：
-```js
+```tsx
 import Button from './button'
 <Button btnType='primary'></Button>
 ```
@@ -77,6 +77,7 @@ import Button from './button'
     <Button btnType='primary' size='sm'>button</Button>
 </Canvas>
 
+## API
 <Props Story="default"/>
 
 
