--- a/src/components/AutoComplete/autoComplete.stories.mdx
+++ b/src/components/AutoComplete/autoComplete.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Canvas, Props, ArgsTable } from '@storybook/addon-docs/blocks'
 import AutoComplete, { DataSourceType, AutoCompleteProps } from './autoComplete'
-import Complete from './storybookShow'
+import Complete from './storyBook'
 import { useState } from 'react';
 
 
