--- a/src/components/Form/form.stories.mdx
+++ b/src/components/Form/form.stories.mdx
@@ -10,6 +10,7 @@ import Select from '../Select/'
 <Meta
   component={Form}
   title='Form'
+  argTypes={{ onFinish: { action: 'onFinish' } }}
   />
 
 export const initialValues = {
@@ -31,55 +32,62 @@ export const onFinishFailed = (values) => {
 
 <br/>
 
-<Form 
-  initialValues={initialValues}
-  onFinish={onFinish}
-  onFinishFailed={onFinishFailed}
-  style={{width:500}}>
-  <Form.Item
-    name="name" 
-    label='用户名'
-    rules={[{ required: true, message: '不能为空' }]}
-    >
-    <Input/>
-  </Form.Item>
-  <Form.Item 
-    name="password"
-    label='密码'
-    rules={[
-      {required: true, message: '不能为空' },
-      { min: 6, message: '最少6位数'}
-    ]}
-    >
-    <Input.Password placeholder="input placeholder" />
-  </Form.Item>
-  <Form.Item name="remmeber">
-    <Checkbox>记住密码</Checkbox>
-  </Form.Item>
-  <Form.Item 
-    name="gender"
-    label='性别'
-    rules={[{required: true, message: '请选择性别' }]}
-    >
-    <Select 
-      placeholder='请选择性别'
-    >
-      <Select.Option value='男生'></Select.Option>
-      <Select.Option value='女生'></Select.Option>
-    </Select>
-  </Form.Item>
-  <Form.Item
-    name="phone" 
-    label='手机'
-    rules={[{ pattern:/^(?:(?:\+|00)86)?1[3-9]\d{9}$/, message: '手机格式不符' }]}
-    >
-    <Input/>
-  </Form.Item>
-  <Form.Item>
-    <Button btnType='primary' type='submit'>submit</Button>
-    <Button type='reset'>reset</Button>
-  </Form.Item>
-</Form>
+<Story name='form' args={{
+  initialValues: initialValues,
+  onFinish: onFinish,
+  onFinishFailed: onFinishFailed,
+  style: {width:500}
+}}>
+  {
+    args => (
+      <Form {...args}>
+        <Form.Item
+          name="name" 
+          label='用户名'
+          rules={[{ required: true, message: '不能为空' }]}
+          >
+          <Input/>
+        </Form.Item>
+        <Form.Item 
+          name="password"
+          label='密码'
+          rules={[
+            {required: true, message: '不能为空' },
+            { min: 6, message: '最少6位数'}
+          ]}
+          >
+          <Input.Password placeholder="input placeholder" />
+        </Form.Item>
+        <Form.Item name="remmeber">
+          <Checkbox>记住密码</Checkbox>
+        </Form.Item>
+        <Form.Item 
+          name="gender"
+          label='性别'
+          rules={[{required: true, message: '请选择性别' }]}
+          >
+          <Select 
+            placeholder='请选择性别'
+          >
+            <Select.Option value='男生'></Select.Option>
+            <Select.Option value='女生'></Select.Option>
+          </Select>
+        </Form.Item>
+        <Form.Item
+          name="phone" 
+          label='手机'
+          rules={[{ pattern:/^(?:(?:\+|00)86)?1[3-9]\d{9}$/, message: '手机格式不符' }]}
+          >
+          <Input/>
+        </Form.Item>
+        <Form.Item>
+          <Button btnType='primary' type='submit'>submit</Button>
+          <Button type='reset'>reset</Button>
+        </Form.Item>
+      </Form>
+    )
+  }
+</Story>
 
 <br/>
 
