--- a/src/components/Form/form.stories.mdx
+++ b/src/components/Form/form.stories.mdx
@@ -28,7 +28,9 @@ export const onFinishFailed = (values) => {
   }
 
 # Form组件
-##### 输入框自动完成功能
+<br/>
+
+##### 表单组件，对多项数据进行录入、校验和收集管理。
 
 <br/>
 
@@ -211,25 +213,6 @@ function App() {
         </Form.Item>
         <Form.Item name="remmeber">
           <Checkbox>记住密码</Checkbox>
-        </Form.Item>
-        <Form.Item 
-          name="gender"
-          label='性别'
-          rules={[{required: true, message: '请选择性别' }]}
-          >
-          <Select 
-            placeholder='请选择性别'
-          >
-            <Select.Option value='男生'></Select.Option>
-            <Select.Option value='女生'></Select.Option>
-          </Select>
-        </Form.Item>
-        <Form.Item
-          name="phone" 
-          label='手机'
-          rules={[{ pattern:/^(?:(?:\+|00)86)?1[3-9]\d{9}$/, message: '手机格式不符' }]}
-          >
-          <Input/>
         </Form.Item>
         <Form.Item>
           <Button btnType='primary' type='submit'>submit</Button>
