--- a/src/components/Checkbox/checkbox.stories.mdx
+++ b/src/components/Checkbox/checkbox.stories.mdx
@@ -1,41 +1,46 @@
-import { Meta, Story, Canvas, Props, ArgsTable } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas, Props, ArgsTable } from '@storybook/addon-docs/blocks'
 import Checkbox from './'
 
 
-<Meta title="Checkbox" 
+<Meta title="Checkbox 多选框" 
   component={Checkbox}
   />
 
-# Checkbox组件
+# Checkbox 多选框
 <br/>
 
-#### 多选框
 <br/>
 
 <Checkbox onChange={(e) => console.log(`checked: ${e.target.checked}`)}>Checkbox</Checkbox>
 <Checkbox disabled>disabled</Checkbox>
 
-#### 安装：
+<br/>
 
-```sh
-  npm install cola-comp --save
+#### 引入：
+```tsx
+  import { Checkbox } from 'cola-react-ui'
 ```
 #### 基本用法：
 ```tsx
-import Checkbox from './Select'
-<div>
-  <Checkbox onChange={(e) => console.log(`checked: ${e.target.checked}`)}>Checkbox</Checkbox>
-  <Checkbox disabled>disabled</Checkbox>
-  <Checkbox.Group
-    options={[
-      { label: 'Apple', value: 'Apple' },
-      { label: 'Pear', value: 'Pear' },
-      { label: 'Orange', value: 'Orange' },
-    ]}
-    defaultChecked={['Apple']}
-    onChange={(res) => console.log(res)}
-  />
-</div>
+import { Checkbox } from 'cola-react-ui'
+
+const MyCheckbox: React.FC = () => {
+  return (
+    <>
+      <Checkbox onChange={(e) => console.log(`checked: ${e.target.checked}`)}>Checkbox</Checkbox>
+      <Checkbox disabled>disabled</Checkbox>
+      <Checkbox.Group
+        options={[
+          { label: 'Apple', value: 'Apple' },
+          { label: 'Pear', value: 'Pear' },
+          { label: 'Orange', value: 'Orange' },
+        ]}
+        defaultChecked={['Apple']}
+        onChange={(res) => console.log(res)}
+      />
+    </>
+  )
+}
 ```
 
 #### CheckboxGruop
