--- a/src/components/Form/form.stories.mdx
+++ b/src/components/Form/form.stories.mdx
@@ -9,28 +9,27 @@ import Select from '../Select/'
 
 <Meta
   component={Form}
-  title='Form'
+  title='Form 表单'
   argTypes={{ onFinish: { action: 'onFinish' } }}
   />
 
 export const initialValues = {
   name: 'hello',
-  password: '',
   remmeber: true,
   phone: '',
 }
 
 export const onFinish = (values) => {
-    console.log(values);
+    console.log(values)
   }
 export const onFinishFailed = (values) => {
     console.log(values)
   }
 
-# Form组件
+# Form 表单
 <br/>
 
-##### 表单组件，对多项数据进行录入、校验和收集管理。
+#### 表单组件，对多项数据进行录入、校验和收集管理。
 
 <br/>
 
@@ -93,24 +92,19 @@ export const onFinishFailed = (values) => {
 
 <br/>
 
-#### 安装：
-
-```sh
-  npm install cola-comp --save
+#### 引入：
+```tsx
+  import { Form } from 'cola-react-ui'
 ```
 #### 基本用法：
-##### onSearch得到搜索值，通过options设置数据源
+##### 
 ```tsx
-import React, { useState } from 'react';
-import Button from './components/Button'
-import Input from './components/Input'
-import Form from './components/Form'
-import Checkbox from './components/Checkbox'
-import Select from './components/Select/'
+import React, { useState } from 'react'
+import { Form, Button, Input, Checkbox, Select } from 'cola-react-ui'
 
 const {Option} = Select
 
-function App() {
+const MyForm: React.FC = () => {
   const initialValues = {
     name: 'hello',
     password: '',
@@ -118,14 +112,14 @@ function App() {
     phone: '',
   }
   const onFinish = (values: any) => {
-    console.log(values);
+    console.log(values)
   }
   const onFinishFailed = (values: any) => {
     console.log(values)
   }
 
   return (
-    <div className="App" >
+    <>
       <Form 
         initialValues={initialValues}
         onFinish={onFinish}
@@ -175,8 +169,8 @@ function App() {
           <Button type='reset'>reset</Button>
         </Form.Item>
       </Form>
-    </div>
-  );
+    </>
+  )
 }
 
 ```
