--- a/src/components/Input/input.stories.mdx
+++ b/src/components/Input/input.stories.mdx
@@ -1,30 +1,43 @@
-import { Meta, Story, Canvas, Props, ArgsTable } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas, Props, ArgsTable } from '@storybook/addon-docs/blocks'
 import Input, {InputProps} from './'
 import Icon from '../Icon'
 
-<Meta title="Input" 
+<Meta title="Input 输入框" 
   component={Input}
   />
 
-# Input组件
+# Input 输入框
 
 <br/>
 
 
 <Input style={{width: 300}} placeholder='input'/>
 
-#####
-##### 安装：
+<br/>
 
-```sh
-  npm install cola-comp --save
-```
-##### 基本用法：
+#### 引入：
 ```tsx
-import Button from './Input'
+  import { Input } from 'cola-react-ui'
+```
+#### 基本用法：
+```tsx
+import { Input } from 'cola-react-ui'
 
-<Input placeholder='input' style={{width: 300}}/>
-<Input.Password placeholder='password' style={{width: 300}}/>
+const MyButton: React.FC = () => {
+  const handleChange = (e) => {
+    console.log(e.target.value)
+  }
+  return(
+    <>
+      <Input
+        placeholder='input'
+        style={{width: 300}}
+        onChange={handleChange}
+      />
+      <Input.Password placeholder='password' style={{width: 300}}/>
+    </>
+  )
+}
 ```
 
 ##### 各种类型Input
