--- a/src/components/Menu/menu.stories.mdx
+++ b/src/components/Menu/menu.stories.mdx
@@ -1,12 +1,12 @@
-import { Meta, Story, Canvas, Props, ArgsTable } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas, Props, ArgsTable } from '@storybook/addon-docs/blocks'
 import Menu, { Item, SubMenu, MenuProps } from './'
 
 
-<Meta title="Menu" 
+<Meta title="Menu 导航菜单" 
   component={Menu}
   />
 
-# Menu组件
+# Menu 导航菜单
 <br/>
 
 #### 导航菜单，横向和纵向两种展示模式，可设置下拉子菜单。
@@ -46,27 +46,34 @@ import Menu, { Item, SubMenu, MenuProps } from './'
 
 <br/>
 
-#### 安装：
-
-```sh
-  npm install cola-comp --save
+#### 引入：
+```tsx
+  import { Menu } from 'cola-react-ui'
 ```
 #### 基本用法：
 ```tsx
-import Menu from './Menu'
-<Menu 
-  style={{width: 300}}
-  mode={vertical}
-  onSelect={(index)=>console.log(index)}
-  >
-  <Menu.Item>Option 0</Menu.Item>
-  <Menu.Item>Option 1</Menu.Item>
-  <Menu.Item>Option 2</Menu.Item>
-  <Menu.SubMenu title='Submenu'>
-    <Menu.Item>Option 3</Menu.Item>
-  <Menu.Item>Option 4</Menu.Item>
-  </Menu.SubMenu>
-</Menu>
+import { Menu } from 'cola-react-ui'
+
+const MyMenu: React.FC = () => {
+  const handleSelect = (index: string) => {
+    console.log(index)
+  }
+  return (
+    <Menu 
+      style={{width: 300}}
+      mode={vertical}
+      onSelect={handleSelect}
+      >
+      <Menu.Item>Option 0</Menu.Item>
+      <Menu.Item>Option 1</Menu.Item>
+      <Menu.Item>Option 2</Menu.Item>
+      <Menu.SubMenu title='Submenu'>
+        <Menu.Item>Option 3</Menu.Item>
+        <Menu.Item>Option 4</Menu.Item>
+      </Menu.SubMenu>
+    </Menu>
+  )
+}
 ```
 
 
