--- a/src/components/Select/select.stories.mdx
+++ b/src/components/Select/select.stories.mdx
@@ -1,40 +1,52 @@
-import { Meta, Story, Canvas, Props, ArgsTable } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas, Props, ArgsTable } from '@storybook/addon-docs/blocks'
 import Select, { Option } from './'
 
 
-<Meta title="Select" 
+<Meta title="Select 下拉选择器" 
   component={Select}
   />
 
-# Select组件
-#### 下拉选择器
+# Select 下拉选择器
 <br/>
 
-<Select style={{width: 300}} defaultValue='React'>
+export const handleSelect = (value) => {
+  console.log(value)
+}
+
+<Select style={{width: 300}} defaultValue='React' onSelect={handleSelect}>
   <Select.Option value='react'>React</Select.Option>
   <Select.Option value='vue'>Vue</Select.Option>
   <Select.Option value='angular'>Angular</Select.Option>
   <Select.Option value='typescript'>TypeScript</Select.Option>
 </Select>
 
-#### 安装：
+<br/>
 
-```sh
-  npm install cola-comp --save
+#### 引入：
+```tsx
+  import { Select } from 'cola-react-ui'
 ```
 #### 基本用法：
 ```tsx
-import Select from './Select'
+import { Select } from 'cola-react-ui'
+
 const { Option } = Select
 
-<Select
-  style={{width: 300}}
-  onSelect={(value)=> console.log(value)}
-  >
-  <Option value='vue'>Vue</Option>
-  <Option value='react'>React</Option>
-  <Option value='typeScript'>TypeScript</Option>
-</Select>
+const MySelect: React.FC = () => {
+  const handleSelect = (value: string|number) => {
+    console.log(value)
+  }
+  return (
+    <Select
+      style={{width: 300}}
+      onSelect={handleSelect}
+      >
+      <Option value='vue'>Vue</Option>
+      <Option value='react'>React</Option>
+      <Option value='typeScript'>TypeScript</Option>
+    </Select>
+  )
+}
 ```
 
 #### 另一种使用方法，直接传入options数组，不需要配置Option组件
@@ -42,7 +54,7 @@ const { Option } = Select
 <Canvas>
   <Story name='select' args={{
     options:[{value:'java'},{value:'go'},{value:'c++'}],
-    style: {width: 300}
+    style: {width: 300},
   }}>
     {args => <Select {...args} />}
   </Story>
