select选项展示优化

--- a/src/components/Select/select.stories.mdx
+++ b/src/components/Select/select.stories.mdx
@@ -13,7 +13,7 @@ export const handleSelect = (value) => {
   console.log(value)
 }
 
-<Select style={{width: 300}} defaultValue='React' onSelect={handleSelect}>
+<Select style={{width: 300}} defaultValue='react' onSelect={handleSelect}>
   <Select.Option value='react'>React</Select.Option>
   <Select.Option value='vue'>Vue</Select.Option>
   <Select.Option value='angular'>Angular</Select.Option>
