--- a/src/components/Select/select.stories.mdx
+++ b/src/components/Select/select.stories.mdx
@@ -1,66 +1,74 @@
-import { Meta, Story, Canvas, Props, ArgsTable } from '@storybook/addon-docs/blocks'
-import Select, { Option } from './'
+import {
+  Meta,
+  Story,
+  Canvas,
+  Props,
+  ArgsTable,
+} from "@storybook/addon-docs/blocks";
+import Select, { Option } from "./";
 
-
-<Meta title="Select 下拉选择器" 
-  component={Select}
-  />
+<Meta title="Select 下拉选择器" component={Select} />
 
 # Select 下拉选择器
-<br/>
+
+<br />
 
 export const handleSelect = (value) => {
-  console.log(value)
-}
+  console.log(value);
+};
 
-<Select style={{width: 300}} defaultValue='react' onSelect={handleSelect}>
-  <Select.Option value='react'>React</Select.Option>
-  <Select.Option value='vue'>Vue</Select.Option>
-  <Select.Option value='angular'>Angular</Select.Option>
-  <Select.Option value='typescript'>TypeScript</Select.Option>
+<Select style={{ width: 300 }} defaultValue="react" onSelect={handleSelect}>
+  <Select.Option value="react">React</Select.Option>
+  <Select.Option value="vue">Vue</Select.Option>
+  <Select.Option value="angular">Angular</Select.Option>
+  <Select.Option value="typescript">TypeScript</Select.Option>
 </Select>
 
-<br/>
+<br />
 
 #### 引入：
-```tsx
-  import { Select } from 'cola-react-ui'
-```
-#### 基本用法：
-```tsx
-import { Select } from 'cola-react-ui'
 
-const { Option } = Select
+```tsx
+import { Select } from "cola-react-ui";
+```
+
+#### 基本用法：
+
+```tsx
+import { Select } from "cola-react-ui";
+
+const { Option } = Select;
 
 const MySelect: React.FC = () => {
-  const handleSelect = (value: string|number) => {
-    console.log(value)
-  }
+  const handleSelect = (value: string | number) => {
+    console.log(value);
+  };
   return (
-    <Select
-      style={{width: 300}}
-      onSelect={handleSelect}
-      >
-      <Option value='vue'>Vue</Option>
-      <Option value='react'>React</Option>
-      <Option value='typeScript'>TypeScript</Option>
+    <Select style={{ width: 300 }} onSelect={handleSelect}>
+      <Option value="vue">Vue</Option>
+      <Option value="react">React</Option>
+      <Option value="typeScript">TypeScript</Option>
     </Select>
-  )
-}
+  );
+};
 ```
 
-#### 另一种使用方法，直接传入options数组，不需要配置Option组件
+#### 另一种使用方法，直接传入 options 数组，不需要配置 Option 组件
 
 <Canvas>
-  <Story name='select' args={{
-    options:[{value:'java'},{value:'go'},{value:'c++'}],
-    style: {width: 300},
-  }}>
-    {args => <Select {...args} />}
+  <Story
+    name="select"
+    args={{
+      options: [{ value: "java" }, { value: "go" }, { value: "c++" }],
+      style: { width: 300 },
+    }}
+  >
+    {(args) => <Select {...args} />}
   </Story>
 </Canvas>
 
 ## API
+
 #### Select
 
 <Props of={Select} />
@@ -68,7 +76,3 @@ const MySelect: React.FC = () => {
 #### Option
 
 <Props of={Select.Option} />
-
-
-
-
