--- a/src/components/Slider/slider.stories.mdx
+++ b/src/components/Slider/slider.stories.mdx
@@ -1,39 +1,67 @@
-import { Meta, Story, Canvas, Props, ArgsTable } from '@storybook/addon-docs/blocks'
-import Slider from './'
+import {
+  Meta,
+  Story,
+  Canvas,
+  Props,
+  ArgsTable,
+} from "@storybook/addon-docs/blocks";
+import Slider from "./";
 
+<Meta title="Slider 滑动输入条" component={Slider} />
 
-<Meta title="Slider"
-  component={Slider}
-  />
+# Slider 滑动输入条
 
+<br />
 
+<Story
+  name="slider"
+  args={{
+    defaultValue: 50,
+    max: 100,
+    min: 0,
+    onChange: (value) => console.log("onChange: ", value),
+    onAfterChange: (value) => console.log("onAfterChange: ", value),
+    style: { width: 400 },
+  }}
+>
+  {(args) => <Slider {...args} />}
+</Story>
 
-# Select 下拉选择器
-<br/>
+<br />
 
+#### 引入：
 
-<br/>
+```tsx
+import { Slider } from "cola-react-ui";
+```
 
-<Slider/>
+#### 基本用法：
 
+```tsx
+import { Slider } from "cola-react-ui";
 
-
-
-#### 另一种使用方法，直接传入options数组，不需要配置Option组件
-<Canvas>
-  <Story name='select' args={{}}>
-    {args => <Slider {...args} />}
-  </Story>
-</Canvas>
-
+const MySelect: React.FC = () => {
+  const onChange = (value: number) => {
+    console.log("onChange: ", value);
+  };
+  const onAfterChange = (value: number) => {
+    console.log("onAfterChange: ", value);
+  };
+  return (
+    <Slider
+      style={{ width: 400 }}
+      defaultValue={50}
+      max={100}
+      min={0}
+      onChange={onChange}
+      onAfterChange={onChange}
+    />
+  );
+};
+```
 
 ## API
-#### Select
 
+#### Slider
 
-#### Option
-
-
-
-
-
+<Props of={Slider} />
