--- a/src/components/Slider/slider.stories.mdx
+++ b/src/components/Slider/slider.stories.mdx
@@ -19,6 +19,7 @@ import Slider from "./";
     defaultValue: 50,
     max: 100,
     min: 0,
+    step: 1,
     onChange: (value) => console.log("onChange: ", value),
     onAfterChange: (value) => console.log("onAfterChange: ", value),
     style: { width: 400 },
